--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -189,7 +189,7 @@ const createExcerpt = (content: string, length: number = 100) => {
   </article>
   
   <Footer />
-  <ServicePanel client:load />
+  <!-- <ServicePanel client:load /> -->
 </body>
 </html>
 
