dodanie dokumentów i ustapwnienie forlumarza kontaktowego

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -56,17 +56,10 @@ const currentYear = new Date().getFullYear();
       <div class="md:col-span-1 lg:col-span-2 text-center lg:text-left">
         <h3 class="font-semibold text-text-primary">Dokumenty</h3>
         <ul class="mt-4 space-y-2">
-          <li><a href="/regulamin" class="text-text-muted hover:text-brand-blue transition-colors">Regulamin</a></li>
-          <li><a href="/polityka-prywatnosci" class="text-text-muted hover:text-brand-blue transition-colors">Polityka Prywatności</a></li>
-          <li>
-            <button
-              type="button"
-              onclick="window.showCookieBanner?.()"
-              class="text-white/70 hover:text-brand-blue transition-colors text-left"
-            >
-              Zarządzaj cookies
-            </button>
-          </li>
+          <li><a href="/dokumenty/regulamin" class="text-text-muted hover:text-brand-blue transition-colors">Regulamin</a></li>
+          <li><a href="/dokumenty/polityka-prywatnosci" class="text-text-muted hover:text-brand-blue transition-colors">Polityka Prywatności</a></li>
+          <li><a href="/dokumenty/rodo" class="text-text-muted hover:text-brand-blue transition-colors">RODO</a></li>
+          <li><a href="/dokumenty/polityka-cookies" class="text-text-muted hover:text-brand-blue transition-colors">Polityka Cookies</a></li>
         </ul>
       </div>
 
