--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const seoData = await getSeoHome();
   />
 
   <!-- Treść strony -->
-  <Hero />
+  <Hero client:idle/>
   <Problems />
   <Services />
   <CaseStudy />
